--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.10",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.22",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
