--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@vercel/speed-insights": "^1.0.10",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.22",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.11",
     "next": "14.1.4",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
