--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.15",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@vercel/speed-insights": "^1.0.10",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.11",
-    "next": "14.1.4",
+    "next": "^14.2.15",
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
